--- a/index.Rmd
+++ b/index.Rmd
@@ -474,7 +474,7 @@ vrt_name <- file.path(paste0(outdir,"/",tiles, "_",paste0(bands_select, collapse
 # Select all dates of the blue band
 b_vrt <- timeVrtProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2015-10-21", end_date = "2016-03-01", te = c(xmin, ymin, xmax, ymax))
 
-dir.create('/userdata/cloud_filter')
+dir.create('/userdata/cloud_filter', showWarnings = F)
 out_name <- paste('/userdata/cloud_filter/cloud_filter.envi', sep = "")
 
 ```
@@ -596,8 +596,8 @@ We use a seasonal model approach and descriptive statistics. Per band and pixel 
 The coefficients of this model are then used as metrics for overall level and seasonality. The number of output coefficients depend on the parameter 'order'. QC-good parameter ensures that values that are missing (0 or not 1) are omitted. Also values that are marked as additional clouds by the smoothLoess function (value 2 in QC-good) will thus be ignored by the linear model.
 
 ```{r,eval=T}
-d <- getHarmMetrics(f$x,QC_good = f$QC_good ,dates = dates, sig = .95, order = 1)
-d
+model_metrics <- getHarmMetrics(f$x,QC_good = f$QC_good ,dates = dates, sig = .95, order = 1)
+model_metrics
 ```
 
 ## Run metrics with a raster brick output
@@ -605,7 +605,8 @@ d
 The following function runs the getHarmMetrics to our virtual raster brick and returns the model coefficients. Each coefficient is thus returned as a raster layer, where the output number of rasterlayers depend on the 'order' that you assigns. Hence the function
 
 Lets start of with setting the required variables for the function parameters. 
-```{r, eval=T}
+
+```{r, eval=F}
 # create output name on the metrics
 out_name <- file.path(getwd(), paste0("rsdata/probav/metrics/",tiles[tn],"_harm_lm2_loess_03_scaled.envi"))
 
@@ -633,10 +634,90 @@ cat(sprintf("\nlayers: %i  | bands: %s  | blocks: %i  | cores: %i\n",
 
 Now lets try out the getHarmMetricsSpatial function! Most of the functions parameters must be familiar by now. The cf-bands (cloud_free bands) is the coerced selection of the bands to which you would like to apply the cloud filter. My 'bands-select' variable is set to 3 bands, the BLUE, SWIR and NDVI. By setting the cf-bands to c(1,2), I apply the additional cloud filter to band 1 and 2 from my selected bands, in this scenario the BLUE and SWIR. The thresholds follow a similar process, where the given thresholds below apply to the first 2 bands. Each 2 values represent the min and max of your selected threshold, which are the min/max values to detect addtional clouds/shadow. 
 
-The getHarmMetricsSpatial is basicly an 'all in one' function of the previous sections, applying the cloud filter to a region of interest using your selected band. Depending on your selected region of interest in the timeVrtProbaV2 function and your available cores/memory, this could take some time! So feel free to grab something to eat or a coffee.
+The getHarmMetricsSpatial is basicly an 'all in one' function of the previous sections, applying the cloud filter to a region of interest using your selected band. Depending on your selected region of interest in the timeVrtProbaV2 function and your available cores/memory. The function also allows you to scale up your values, allowing you to switch from float to integers, reducing storage/memory use. 
+
+There are currently two functions within the ProbaV package that are able to stack all the requested time series from your selection. The 'timeVrtProbaV' and the 'timeStackProbaV'. The 'timeStackProbaV' will use the more convential stacking from raster::stack, whereas the 'timeVrtProbaV' will use the gdalbuildvrt (from GDAL) function, to build a virtual raster stack. The 'timeVrtProbaV' requires you to set your extent within the function call (te parameter), whereas the 'timeStackProbaV' has to be cropped after stacking. 
+
+```{r, eval=T, results= 'hide', message='False'}
+# set small subset
+xmin <- -1.177512 
+xmax <- -1.162664 
+ymin <- 9.845443 
+ymax <- 9.864962 
+e <- extent(xmin,xmax,ymin,ymax)
+
+# Create virtual stack
+b_vrt <- timeVrtProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2014-01-21", end_date = "2016-09-01", te = c(xmin, ymin, xmax, ymax))
+
+b_vrt_stack <- timeStackProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2014-01-21", end_date = "2016-09-01")
+
+# crop stack to extent
+b_vrt_stack <- crop(b_vrt_stack,e)
+
+df_probav_sm <- timeVrtProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles[1], return_raster = F, start_date ="2014-01-21", end_date = "2016-09-01")
+```
+
+Its not the stacking itself that shows a computational advance, but calling the following function shows that the virtual raster stack takes less time to compute. Lets check out the system time between the virtual raster stack and the common raster::Rasterbrick. Lets write each brick to a different variable and compare them later on. 
+
+```{r, eval=T, message=FALSE, warning= FALSE}
+# set output file name
+out_name <- file.path(getwd(), paste0("rsdata/probav/metrics/",tiles,"_harm_lm2_loess_03_scaled_VRT.envi"))
+
+# run system time
+systime_vrt <- system.time(getHarmMetricsSpatial(x = b_vrt, minrows = minrows, mc.cores = mc.cores,
+                                      logfile=logfile,
+                                      overwrite=T, span=0.3,
+                                      cf_bands = c(1,2), thresholds=c(-80, Inf, -120, 120),
+                                      filename = out_name, df_probav_sm = df_probav_sm, 
+                                      order = 1, datatype="INT2S", scale_f = c(10,100,10)))
+# set output file name
+out_name_stack <- file.path(getwd(), paste0("rsdata/probav/metrics/",tiles,"_harm_lm2_loess_03_scaled_Stack.envi"))
+
+# run system time
+systime_stack <- system.time(getHarmMetricsSpatial(x = b_vrt_stack, minrows = minrows, mc.cores = mc.cores,
+                                      logfile=logfile,
+                                      overwrite=T, span=0.3,
+                                      cf_bands = c(1,2), thresholds=c(-80, Inf, -120, 120),
+                                      filename = out_name_stack, df_probav_sm = df_probav_sm, 
+                                      order = 1, datatype="INT2S", scale_f = c(10,100,10)))
+```
+
+Lets see if there is a difference in time! Consider that this is a small subset, but the difference in time on the machine is significant on larger datasets.
+
+```{r, echo= FALSE}
+cat("System time of the Virtual raster stack: ")
+systime_vrt
+
+cat("System time of the Virtual raster stack: ")
+systime_stack
+```
+
+Now, lets apply the function on a larger extent. Depending on your available cores and RAM, this function could take some time! I strongly suggest to use a small subset area to test the function on, instead of a whole tile or multiple tiles.
+
+```{r}
+# set sub-extent
+xmin <- -2.064549  
+xmax <- -1.074974 
+ymin <- 8.840184
+ymax <- 10.39336
+
+# set filename
+out_name <- file.path(getwd(), paste0("rsdata/probav/metrics/",tiles[tn],"_harm_lm2_loess_03_scaled.envi"))
+
+bands_select <- '(BLUE|SWIR|NDVI)' 
+bands_sel <- paste(bands_select,'_sm.tif$', sep = "")
+vrt_name <- file.path(paste0(outdir,"/",tiles, "_",paste0(bands_select, collapse = "_"), ".vrt"))
+
+# Create virtual stack
+b_vrt <- timeVrtProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles, return_raster = T, start_date = "2014-01-21", end_date = "2016-09-01", te = c(xmin, ymin, xmax, ymax))
+
+df_probav_sm <- timeVrtProbaV(probav_sm_dir, pattern = bands_sel, vrt_name = vrt_name, tile = tiles[1], return_raster = F, start_date ="2014-01-21", end_date = "2016-09-01")
+```
+
+So, time to grab something to eat or a coffee!
 
 ```{r, eval=F, results= 'hide'}
-b_metrics <- getHarmMetricsSpatial(x = b_vrt, minrows = minrows, mc.cores = mc.cores,
+b_metrics <- getHarmMetricsSpatial(x = b_vrt, minrows = 5, mc.cores = 5,
                                       logfile=logfile,
                                       overwrite=T, span=0.3,
                                       cf_bands = c(1,2), thresholds=c(-80, Inf, -120, 120),
@@ -646,13 +727,23 @@ b_metrics <- getHarmMetricsSpatial(x = b_vrt, minrows = minrows, mc.cores = mc.c
 
 ## plot the metrics
 
+Once the function has succesfully passed, we can see the output! The output is a brick of rasters that store the model coefficients (or metrics) applied in the getHarmMetricsSpatial function. Thus, the amount of bands returned (as raster layers) depends on the chosen 'order' in the getHarmMetricsSpatial. Due to the parallelization of the function, the names of the output (brick) get lost, and the chronological order with it. 
+
+Since the getHarmMetricsSpatial funtion uses the getHarmMetrics function, but applies it to a raster, we can see the names of the metrics by evaluating our previously getHarmMetrics section. Lets see the difference in output from different 'order' levels. 
+
+```{r, eval=T}
+# Order 1
+cat("The metrics returned by the getHarmMetrics function, with order 1, are the: ", names(model_metrics))
+# Order 2
+model_metrics <- getHarmMetrics(f$x,QC_good = f$QC_good ,dates = dates, sig = .95, order = 2)
+cat("The metrics returned by the getHarmMetrics function, with order 2, are the: ", names(model_metrics))
+```
+
+Lets plot the first 6 layers from the created metrics brick. As can be observed, the names are lost of the bands, and the raster values have been scaled by the selected 'scale_f' parameter in the getHarmMetricsSpatial function. 
+
 ```{r,eval=T}
 # metrics info
 b_metrics <- brick(out_name)
-
-# band order
-# names c("min", "max", "intercept", names(lmh$coefficients)[-1])
-
 # plotting metrics
 sub_plot <- subset(b_metrics, 1:6)
 plot(sub_plot)
@@ -660,26 +751,14 @@ plot(sub_plot)
 
 ## Classification process
 
-Lets classify! Prepare classification data
+Lets create a land cover classification dataset from our returned metrics!
 
----------------------------------------SCRIPT UPDATE, DONT RUN THIS SECTION----------------------------------
+In order for us to classify our region of interest, we need a set of reference data. Lets read a .csv file from a github repository that contains reference data from a subset of North-West Africa. However, you can create or use a different reference dataset for a different region. The next section downloads a .csv file and assigns coordinates and projection system to the file. We will then plot one of our metrics bands with the reference data.
 
 ```{r,eval=T}
 csv <- getURL("https://raw.githubusercontent.com/JornDallinga/JornDallinga.github.io/master/ref/ref_JD.csv")
 pts <- read.csv(text = csv)
 
-#save(pts, file = 'ref/ref_JD')
-#ptss <-load('ref/ref_JD')
-
-#write.csv(pts, "ref/ref_JD.csv")
-#pnt_JD <- readOGR(file.path(getwd(), "ref"), "ref_Glc2ViirsStepNmoGeowikiGlob_point_africa", stringsAsFactors = F)
-# crop reference data to metrics extent
-
-#pts <- read.csv("ref/ref_JD.csv")
-# to dataframe
-#pts=as.data.frame(pnt_JD)
-#pts <- pts[,c("ID_1","Y","X","G9_cl1")]
-# fix coordinates error
 coordinates(pts) <- ~X+Y
 # add projection
 projection(pts) <- '+proj=longlat +datum=WGS84 +no_defs +ellps=WGS84 +towgs84=0,0,0'
@@ -692,7 +771,7 @@ plot(b_metrics$Band.1)
 plot(pnt_JD, add = T, col = 'red')
 ```
 
-Extract cell value per reference point and create a merged dataframe
+Here, we extract the cell values per reference point and create a merged dataframe. This dataframe will serve as our reference data, where each band value represents the value that intersects with a certain reference point. The output of the parallel processing section below, results in a spatialdataframe with the number of rows equal to the amount of reference points.
 
 ```{r,eval=T}
 # ----------------------- extract per tile ------------------#
@@ -702,36 +781,40 @@ tiles <- c("X17Y06") # ..., "X17Y06", "X18Y06", "X19Y06")
 registerDoParallel(min(4, length(tiles)))
 df_covs_JD <- foreach(tile=tiles, .combine=rbind, .inorder = T) %dopar% {
   print(tile)
-  b_metrics <- brick(paste0(getwd(), "/rsdata/probav/metrics/", tile,"_harm_lm2_loess_03_scaled.envi"))
+  b_metrics <- b_metrics
   print("loaded")
   df_metrics_tile  <- extract(b_metrics, pnt_JD, cellnumbers=T, df=T)
   df_metrics_tile <- cbind(tile=rep(tile, nrow(df_metrics_tile)), df_metrics_tile)
   df_metrics_tile  <- na.exclude(df_metrics_tile)
   df_covs_tile <- df_metrics_tile
-  print(names(df_covs_tile))
-  print( nrow(df_covs_tile))
-  df_covs_tile
 }
+# call data frame
+df_covs_JD
 ```
 
-Merged dataframe on ref data and cell values
+Check if n reference points equal n rows of our output spatialdataframe
+
+```{r}
+# Check if n == nrow
+nrow(df_covs_JD) == nrow(pnt_JD)
+```
+
+Lets add the the reference class 'Code' to the our dataframe.
 
 ```{r,eval=T}
-# JD
 df_ref_JD <- pnt_JD@data[df_covs_JD$ID,]
 df_model_JD <- cbind(Code=df_ref_JD$Code, df_covs_JD)
+df_model_JD
 # good to save this!
 ```
 
-Clear NAs
+Lets exclude classes below '5', Because I am not interested in these for this tutorial. Additionally, lets clear any NA's left in the dataframe. Next step is to assign land cover names to the class codes. In this example, I know that the class codes are defined as 1= "Forest", 2= "Shrubland", 3="Grassland" 4= "Cropland", 5="Bare". After that, we need to convert these class names to factor, so that our classification function/model can work with the dataframe.
 
 ```{r,eval=T}
 # exclude some classes
 df_model_JD <- subset(df_model_JD, Code <= 5)
 # exclude NAs
 cc <- complete.cases(df_model_JD)
-table(df_model_JD$Code[cc])
-names(df_model_JD)
 # assign names to classes
 df_model_JD$LC[df_model_JD$Code == 1] <- "Forest"
 df_model_JD$LC[df_model_JD$Code == 2] <- "Shrubland"
@@ -742,15 +825,18 @@ df_model_JD$LC[df_model_JD$Code == 5] <- "Bare"
 # convert to factor
 df_model_JD$LC <- as.factor(df_model_JD$LC)
 # only complete cases
+print("The amount of reference points per class")
 table(df_model_JD$LC[cc])
-glimpse(df_model_JD[cc, -(2:4)])
 ```
 
-"Ranger is a fast implementation of random forest (Breiman 2001) or recursive partitioning, particularly suited for high dimensional data. Classification, regression, probability estimation and survival forests are supported. Classification and regression forests are implemented as in the original Random Forest (Breiman 2001), survival forests as in Random Survival Forests (Ishwaran et al. 2008). For probability estimation forests see Malley et al. (2012)." [source](https://github.com/imbs-hl/ranger)
+"Ranger is a fast implementation of random forest (Breiman 2001) or recursive partitioning, particularly suited for high dimensional data. Classification, regression, probability estimation and survival forests are supported. Classification and regression forests are implemented as in the original Random Forest (Breiman 2001), survival forests as in Random Survival Forests (Ishwaran et al. 2008). For probability estimation forests see Malley et al. (2012)." [source](https://github.com/imbs-hl/ranger).
+
+The following block runs the ranger function on our training data (df_model_JD) and writes the output ranger model to a RDS file.
 
 ```{r,eval=T}
 # run ranger on Land cover classification
 cat("------- ranger ---------")
+# exclude the first 4 columns of the df_model_JD by df_model_JD[cc, -(1:4)]
 ra_JD <- ranger(LC ~ ., df_model_JD[cc, -(1:4)], num.trees=500, write.forest=T,
                   probability = F, num.threads=10, verbose=T, importance = "impurity")
 # save the ranger model
@@ -760,7 +846,7 @@ saveRDS(ra_JD, "data/models/ra_JD_merge5_x16.rds")
 print(ra_JD)
 ```
 
-dont evaluate this section
+Now the final step of this tutorial! Here we run the mcPredictSpatial function that classifies our metrics based on the ranger model we created. We read back our created ranger model from the directory. 
 
 ```{r, eval=T, message=FALSE}
 #### ------------- predict -------------------------------------------
@@ -771,7 +857,6 @@ tiles <- c("X17Y06")
 
 for (tile in tiles){
   print(paste0("--------------", tile, "-------------------"))
-  # -------------------------------data----------------------------------#
   b_metrics <- b_metrics
   print("---predict--------------")
   
@@ -785,7 +870,8 @@ for (tile in tiles){
 }
 ```
 
-Check output!
+Now lets check our results! Below a land cover classified image on our subset! 
+NOTE: Be sure to add and/or change the colours based on the amount of classes you created! 
 
 ```{r,eval=T}
 r <- raster(paste0(getwd(), "/rsdata/probav/results/pred_JD_", tile,  ".tif"))
@@ -799,6 +885,14 @@ my_col = c('yellow','darkgreen','lightgreen')
 ## Plot
 levelplot(r, col.regions=my_col, xlab="", ylab="")
 ```
+
+
+Congrats! Now have fun applying this tutorial on your region of interest! Keep in mind that there are several limitations on the cloud filter section. Specially to areas that occasionally receive snow! 
+
+This tutorial has been tested on the S5 (5-day) 100m resolution product of Proba-V. It might return unexpected results or errors if attempted on different datasets, and has not been tested yet on other sensors, and products of ProbaV.
+
+Please report any errors or anomalies.
+
 
 [creative commens](https://creativecommons.org/licenses/by-sa/4.0/) ![CC logo](https://i.creativecommons.org/l/by-sa/4.0/80x15.png)
 
