--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,7 @@
 title: "Proba-V"
 author: "Jorn Dallinga, PROBA-V package used from Johannes Eberenz"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
-Version: "1.0 (updated 6-11)"
+Version: "1.0 (updated 11-11)"
 output:
   knitrBootstrap::bootstrap_document:
     title: "ProbaV" 
@@ -82,6 +82,7 @@ source_https("https://raw.githubusercontent.com/JornDallinga/ProbaV_JD/master/R/
 ## Data download
 
 This example script uses data existing on the cloud toolbox and follows an existing directory structure. Downloading ProvaV data will not create that directory structure yet. Thus, this script will work when following the ProbaV directory structure on the cloud toolbox, but not yet with downloading the data manually to a certain directory. But if you would like to know how to download the ProbaV data, below follows an example.
+
 Lets download the PROBA-V tiles by using coordinates! 
 
 ```{r}
@@ -142,9 +143,9 @@ start by setting our data path which contains the downloaded files. The followin
 # variable setting for data path
 10_dir <- "set data path" 
 # if you manually downloaded the data
-10_dir <- dirloc
+10_dir <- dirloc # Character
 # set data path to which you would write large files
-outdir <- outdir
+outdir <- outdir # Character
 ```
 
 The files should be stored in the folder structure used by vito, using YYYYMMDD notation for the folders that contain the .tif files. Where one folder per date (YYYYMMDD) contains files for all tiles. Through which folders you wish to loop the product information function, is up to you. For this tutorial, we select a preset of folders based on subfolder directory lenght. In this scenario, I know that the YYYYMMDD folder notations contain the correct .tif files. Since there are several folders that still contain unprocessed PROBAV data in my 'l0_dir' path, I want to exclude them. 
@@ -176,7 +177,7 @@ datalist = list()
 tiles <- 'X17Y06'
 for (i in 1:length(dir_file)){
   dat <- getProbaVinfo(dir_file[i], pattern = ".tif$", tiles = tiles)
-  datalist[[i]] <- dat # add it to your list
+  datalist[[i]] <- dat # add dat your list
 }
 # merge the created dataframes into a single dataframe of product information on your selected tiles.
 df_probav_down <- do.call(rbind, datalist)
@@ -208,7 +209,7 @@ The Radiometry brick contains 4 raster layers. Lets split the radiometry brick i
 ```{r}
 # First, select the radiometry .tif files from the download folder and which tiles to use
 patterns <- c('RADIOMETRY.tif$') # "NDVI.tif$"
-tiles <- c("X17Y06") # c("X16Y06","X11Y07", "X11Y08", "X11Y09", ...)
+tiles <- c("X17Y06") # c("X16Y06","X18Y06", "X19Y06", ...)
 
 # Lets gather the information from the radiometry band using the variables assigned above. 
 df = list()
@@ -279,7 +280,7 @@ The following section sets the required parameters for the next function, the 'v
 # ----- check input --- #
 tn <- 1 # tile number (tn) 
 # Select tiles of your study area. Multiple tiles can be coerced together. 
-tiles <- c("X17Y06") # c("X18Y02", "X18Y03")
+tiles <- c("X17Y06") #e.g. c("X17Y06","X18Y06")
 ```
 
 Lets use the getProbaVinfo function again to visualize a certain tile data that we have.
@@ -389,7 +390,7 @@ bands_sel <- paste(bands_select,'_sm.tif$', sep = "")
 # run process batch on the unfiltered data
 # Here we change the QC_value to select all the cells, including the cloud values.
 # Write the clouds to a new directory, so it wont mess up the original file
-# Select one point in time, lets say: 2015-04-16
+# Select one point in time, lets say: 2015-10-21
 
 cloud_dir <- "rsdata/probav/sm_Withclouds"
 dir.create(file.path(cloud_dir), showWarnings = FALSE)
@@ -465,7 +466,7 @@ par(mfrow=c(1,1))
 
 Looks good! The orange area here visualises the clouds/shadow and bad pixels detected by the cloud detection algorythm within Proba-V. If you look closely, you can still observe light cloud and shadow remnants, mostly near the orange masked clouds. Altough this original cloud detection algorythm allready masked out almost all clouds, we would like to clear as many clouds (and shadow) as possible, so we have a clear reflectance of the pixels.
 
-Lets apply the additional cloud filter! In this example we use the blue band to detect additional cloud and shadow remnants in the landscape.
+Lets apply the additional cloud filter! In this example we use the blue band to detect additional cloud and shadow remnants in the landscape. The BlUE and SWIR bands are conventionally sensitive in cloud detection. For our final classification, in the section 'Spatial Harmonic Metrics', we will use both BLUE and SWIR for additional cloud detection and removal. 
 
 ```{r}
 bands_select <- '(BLUE)' 
@@ -593,16 +594,16 @@ plot(f, main = "plotting time series.
 ## get harmonic metrics
 
 We use a seasonal model approach and descriptive statistics. Per band and pixel i we derive median and percentiles and fit a liner harmonic model to the time series.
-The coefficients of this model are then used as metrics for overall level and seasonality. The number of output coefficients depend on the parameter 'order'. QC-good parameter ensures that values that are missing (0 or not 1) are omitted. Also values that are marked as additional clouds by the smoothLoess function (value 2 in QC-good) will thus be ignored by the linear model.
+The coefficients of this model are then used as metrics for overall level and seasonality. The number of output coefficients depend on the parameter 'order'.  QC-good parameter ensures that values that are missing (0 or not 1) are omitted. Also values that are marked as additional clouds by the smoothLoess function (value 2 in QC-good) will thus be ignored by the linear model.
 
 ```{r,eval=T}
 model_metrics <- getHarmMetrics(f$x,QC_good = f$QC_good ,dates = dates, sig = .95, order = 1)
 model_metrics
 ```
 
-## Run metrics with a raster brick output
+## Spatial Harmonic Metrics
 
-The following function runs the getHarmMetrics to our virtual raster brick and returns the model coefficients. Each coefficient is thus returned as a raster layer, where the output number of rasterlayers depend on the 'order' that you assigns. Hence the function
+The following function runs the getHarmMetrics to our virtual raster brick and returns the model coefficients. Each coefficient is thus returned as a raster layer, where the output number of rasterlayers depend on the 'order' that you assigns. 
 
 Lets start of with setting the required variables for the function parameters. 
 
@@ -638,7 +639,7 @@ The getHarmMetricsSpatial is basicly an 'all in one' function of the previous se
 
 There are currently two functions within the ProbaV package that are able to stack all the requested time series from your selection. The 'timeVrtProbaV' and the 'timeStackProbaV'. The 'timeStackProbaV' will use the more convential stacking from raster::stack, whereas the 'timeVrtProbaV' will use the gdalbuildvrt (from GDAL) function, to build a virtual raster stack. The 'timeVrtProbaV' requires you to set your extent within the function call (te parameter), whereas the 'timeStackProbaV' has to be cropped after stacking. 
 
-```{r, eval=T, results= 'hide', message='False'}
+```{r, eval=T, results= 'hide', message='FALSE'}
 # set small subset
 xmin <- -1.177512 
 xmax <- -1.162664 
@@ -722,7 +723,7 @@ b_metrics <- getHarmMetricsSpatial(x = b_vrt, minrows = 5, mc.cores = 5,
                                       overwrite=T, span=0.3,
                                       cf_bands = c(1,2), thresholds=c(-80, Inf, -120, 120),
                                       filename = out_name, df_probav_sm = df_probav_sm, 
-                                      order = 1, datatype="INT2S", scale_f = c(10,100,10))
+                                      order = 2, datatype="INT2S", scale_f = c(10,100,10))
 ```
 
 ## plot the metrics
